@@ -1,10 +1,38 @@
 #!/usr/bin/env sh
 cd `dirname $0`/..
 mkdir -p data
+
+DFAULTCONFIG="conf/config.properties"
+CUSTOMCONFIG="data/settings/customized_config.properties"
+DFAULTXmx="-Xmx800m";
+CUSTOMXmx=""
+if [ -f $DFAULTCONFIG ]; then
+ j="`grep Xmx $DFAULTCONFIG | sed 's/^[^=]*=//'`";
+ if [ -n $j ]; then DFAULTXmx="$j"; fi;
+fi
+if [ -f $CUSTOMCONFIG ]; then
+ j="`grep Xmx $CUSTOMCONFIG | sed 's/^[^=]*=//'`";
+ if [ -n $j ]; then CUSTOMXmx="$j"; fi;
+fi
+
+#echo "DFAULTXmx: !$DFAULTXmx!"
+#echo "CUSTOMXmx: !$CUSTOMXmx!"
+
 CLASSPATH=""
 for N in lib/*.jar; do CLASSPATH="$CLASSPATH$N:"; done
 CLASSPATH=".:./classes/:$CLASSPATH"
+
+cmdline="java";
+
+if [ -n "$CUSTOMXmx" ]; then cmdline="$cmdline -Xmx$CUSTOMXmx";
+elif [ -n "$DFAULTXmx" ]; then cmdline="$cmdline -Xmx$DFAULTXmx";
+fi
+
 echo "starting loklak"
-java -Xmx4G -Xms1G -server -XX:+AggressiveOpts -XX:NewSize=512M -classpath $CLASSPATH org.loklak.LoklakServer >> data/loklak.log 2>&1 & echo $! > data/loklak.pid &
+
+cmdline="$cmdline -server -classpath $CLASSPATH org.loklak.LoklakServer >> data/loklak.log 2>&1 & echo $! > data/loklak.pid &";
+
+eval $cmdline
+#echo $cmdline;
 
 echo "loklak server started at port 9000, open your browser at http://localhost:9000"
